--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,8 +20,13 @@ jobs:
       uses: aquasecurity/trivy-action@master
       with:
           image-ref: 'docker.io/vipinshreyaskumar/actionspyc:${{ github.sha }}'
-          format: 'table'
+          format: 'sarif'
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
+          output: 'trivy-results.sarif'
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+         sarif_file: 'trivy-results.sarif'
