--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,8 @@ jobs:
       contents: write
       pull-requests: write
       repository-projects: write
+      actions: read      
+      security-events: write
       
     steps:
     - uses: actions/checkout@v3
